[package]
name = "Egooye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
eframe = {version = "0.21.3"  ,features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
reqwest = { version = "0.11.16", features = ["json"] }
ehttp = "0.2.0"
poll-promise = "0.2.0"
rand = "0.8.5"
rfd = "0.11.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
surf = "2.3.2"
transpose = "0.2.2"
tokio = { version = "1.27.0", features = ["full"] }

